--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li class="list-group-item d-flex justify-content-between align-items-center">
 	{{id}}. {{burger_name}}
 	{{#if devoured}}
- eaten by {{name}} !
+ eaten by {{Person.name}} !
 	{{/if}}
 {{#unless devoured}}
 	<input name="person" maxlength="100" id="person{{id}}"  required></input>
